[package]
name = "joshuacarrasco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo = "0.8.0"
serde = "1.0.149"
serde_json = "1.0.89"
stylist = {version = "0.11.0", features = ["yew_integration", "parser"] }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"]}
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.33"